# zWork

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  ROADMAP2.md  pyproject.toml
.github/ISSUE_TEMPLATE/: doc_improvement.md  performance_report.md
.github/workflows/: ci.yml  release.yml
.jules/: sentinel.md
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: AnalyticsPage.tsx  ArtifactPanel.tsx  ChatInput.tsx  ChatView.tsx  Landing.tsx  Message.tsx  Onboarding.tsx  ProjectView.tsx  Settings.tsx  Sidebar.tsx  SlashMenu.tsx  Usage.tsx
app/src/lib/: api.ts  cloud.ts  platform.ts  store.ts  templates.ts  update.ts
cloud-src/: .env.example  docker-compose.yml
cloud-src/api/: Cargo.toml
cloud-src/api/src/: main.rs
cloud/api/: Cargo.toml  Dockerfile
cloud/api/src/: main.rs
docs/: AUTH.md  CLOUD.md  WIKI.md
scripts/: package-release.sh
sidecar/: server.py
sidecar/agent/: home.py  providers.py  settings.py  tools.py
tests/: test_anthropic_caching.py  test_extract_document.py  test_provider_presets.py  test_provider_retry.py  test_security_enhancements.py
