[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sidecar"
version = "0.1.0"
description = "zWork: Your Personal AI Assistant that actually gets work done on your computer."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "zWork" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pypdf>=5.0",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
]

[project.scripts]
sidecar = "sidecar.app:main"
zwork-server = "sidecar.server:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["sidecar*"]
