[package]
name = "sidecar-app"
version = "0.3.11"
description = "Sidecar desktop assistant"
authors = ["Sidecar"]
edition = "2021"

[[bin]]
name = "sidecar-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
