[package]
name = "zwork-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tower_governor = "0.4"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
urlencoding = "2.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
